corrects grid target and adds spacing

--- a/css/main.css
+++ b/css/main.css
@@ -4,22 +4,37 @@ body {
   }
   
   .emoji {
-    display: grid;
     border: 1px solid #222;
     border-radius: 8px;
     padding: 1rem;
     gap: 5px;
+  }
+
+  .emojis {
+    padding: 15px;
+    padding-bottom: 15px;
+    display: grid;
+    gap: 15px;
     grid-template-columns: repeat(2,1fr);
     grid-template-rows: repeat(2,1fr);
     grid-template-areas:
     "icon1 icon2"
+    "icon1 icon2"
+    "icon3 icon4"
     "icon3 icon4"
   }
+
+/*
+  .icon {
+    display: flex;
+    flex-wrap: wrap;
+  }*/
 
   .icon:nth-child(1) { grid-area: icon1; }
   .icon:nth-child(2) { grid-area: icon2; }
   .icon:nth-child(3) { grid-area: icon3; }
   .icon:nth-child(4) { grid-area: icon4; }
+  /*assigns a grid area name for each icon*/
   
   .emoji h2 {
     margin: 0;
